--- a/app/src/main/res/layout/fragment_repo_details.xml
+++ b/app/src/main/res/layout/fragment_repo_details.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".modules.repos.modules.details.presentation.RepositoryDetailsFragment">
 
     <ScrollView
         android:id="@+id/details_scroll_container"
@@ -45,6 +47,7 @@
                 android:maxLines="1"
                 android:textColor="?attr/colorSecondary"
                 android:textSize="16sp"
+                android:textIsSelectable="true"
                 android:text="github.com/icerockdev/moko-resources"/>
 
             <ImageView
