--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -25,7 +25,7 @@
                 android:layout_marginTop="70dp"
                 android:contentDescription="@string/logo"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_icerock_logo"
+                android:src="@drawable/ic_github_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
