--- a/app/src/main/res/layout/fragment_repo_details.xml
+++ b/app/src/main/res/layout/fragment_repo_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".modules.repos.modules.details.presentation.RepositoryDetailsFragment">
+    tools:context=".modules.repos.modules.details.presentation.DetailInfoFragment">
 
     <ScrollView
         android:id="@+id/details_scroll_container"
