--- a/app/src/main/res/navigation/core_navigation.xml
+++ b/app/src/main/res/navigation/core_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/authorizationFragment"
-        android:name="com.emelyanov.icerockpractice.modules.auth.presentation.AuthorizationFragment"
+        android:name="com.emelyanov.icerockpractice.modules.auth.presentation.AuthFragment"
         android:label="fragment_authorization"
-        tools:layout="@layout/fragment_authorization" >
+        tools:layout="@layout/fragment_auth" >
         <action
             android:id="@+id/navigateToList"
             app:destination="@id/repositoriesListFragment"
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/repositoryDetailsFragment"
-        android:name="com.emelyanov.icerockpractice.modules.repos.modules.details.presentation.RepositoryDetailsFragment"
+        android:name="com.emelyanov.icerockpractice.modules.repos.modules.details.presentation.DetailInfoFragment"
         android:label="fragment_repo_details"
         tools:layout="@layout/fragment_repo_details" />
     <fragment
