--- a/app/src/main/res/layout/repo_list_item.xml
+++ b/app/src/main/res/layout/repo_list_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bg_ripple">
 
     <TextView
         android:id="@+id/repo_title"
