--- a/app/src/main/res/layout/repos_error_state.xml
+++ b/app/src/main/res/layout/repos_error_state.xml
@@ -30,14 +30,16 @@
 
     <TextView
         android:id="@+id/error_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintDimensionRatio="W 0.8"
         app:layout_constraintTop_toBottomOf="@id/error_title"
-        app:layout_constraintStart_toStartOf="@id/error_title"
-        app:layout_constraintEnd_toEndOf="@id/error_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/refresh_button"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="14sp"
+        android:textAlignment="center"
         android:text="@string/check_your_something"/>
 
 
