--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -32,7 +32,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/token_field"
-                style="@style/IceRockTextInputLayout"
+                style="@style/GitTextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="80dp"
@@ -55,7 +55,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/auth_button"
-        style="@style/IceRockButton"
+        style="@style/GitButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
@@ -68,7 +68,7 @@
 
     <ProgressBar
         android:id="@+id/auth_button_progressbar"
-        style="@style/IceRockProgressbar"
+        style="@style/GitProgressbar"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
