--- a/app/src/main/res/layout/fragment_repositories.xml
+++ b/app/src/main/res/layout/fragment_repositories.xml
@@ -18,7 +18,7 @@
 
     <ProgressBar
         android:id="@+id/repos_progressbar"
-        style="@style/IceRockProgressbar"
+        style="@style/GitProgressbar"
         android:layout_width="56dp"
         android:layout_height="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
