--- a/app/src/main/res/layout/repos_connection_error_state.xml
+++ b/app/src/main/res/layout/repos_connection_error_state.xml
@@ -44,7 +44,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/retry_button"
-        style="@style/IceRockButton"
+        style="@style/GitButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
