--- a/app/src/main/res/layout/repos_error_state.xml
+++ b/app/src/main/res/layout/repos_error_state.xml
@@ -45,7 +45,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/refresh_button"
-        style="@style/IceRockButton"
+        style="@style/GitButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
