--- a/app/src/main/res/layout/repos_error_state.xml
+++ b/app/src/main/res/layout/repos_error_state.xml
@@ -11,7 +11,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_warning"
-        android:contentDescription="@string/error_icon"
+        android:contentDescription="@string/error_icon_description"
         app:layout_constraintBottom_toTopOf="@id/error_title"
         app:layout_constraintVertical_chainStyle="packed"/>
 
@@ -26,7 +26,7 @@
         app:layout_constraintBottom_toTopOf="@id/error_description"
         android:textColor="?attr/colorError"
         android:textSize="16sp"
-        android:text="@string/something_error" />
+        android:text="@string/something_error_title" />
 
     <TextView
         android:id="@+id/error_description"
@@ -40,7 +40,7 @@
         android:textColor="?attr/colorOnPrimary"
         android:textSize="14sp"
         android:textAlignment="center"
-        android:text="@string/check_your_something"/>
+        android:text="@string/check_your_something_body"/>
 
 
     <com.google.android.material.button.MaterialButton
@@ -52,6 +52,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/refresh"
+        android:text="@string/refresh_button"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
