--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -23,7 +23,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="70dp"
-                android:contentDescription="@string/logo"
+                android:contentDescription="@string/logo_description"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_github_logo"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
                 android:layout_marginTop="80dp"
                 android:layout_marginHorizontal="16dp"
                 app:layout_constraintVertical_bias="0"
-                android:hint="@string/personal_access_token"
+                android:hint="@string/token_field_hint"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
