--- a/app/src/main/res/layout/repos_connection_error_state.xml
+++ b/app/src/main/res/layout/repos_connection_error_state.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_no_connection"
-        android:contentDescription="@string/no_connection_icon"
+        android:contentDescription="@string/no_connection_icon_description"
         app:layout_constraintBottom_toTopOf="@id/no_connection_title"
         app:layout_constraintVertical_chainStyle="packed"/>
 
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@id/no_connection_description"
         android:textColor="?attr/colorError"
         android:textSize="16sp"
-        android:text="@string/connection_error" />
+        android:text="@string/connection_error_title" />
 
     <TextView
         android:id="@+id/no_connection_description"
@@ -37,7 +37,7 @@
         app:layout_constraintStart_toStartOf="@id/no_connection_title"
         app:layout_constraintEnd_toEndOf="@id/no_connection_title"
         app:layout_constraintBottom_toTopOf="@id/retry_button"
-        android:text="@string/check_your_internet_connection"
+        android:text="@string/connection_error_body"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="14sp"/>
 
@@ -51,6 +51,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/retry"
+        android:text="@string/retry_button"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
