--- a/app/src/main/res/layout/repos_empty_state.xml
+++ b/app/src/main/res/layout/repos_empty_state.xml
@@ -11,7 +11,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_folder"
-        android:contentDescription="@string/folder_icon"
+        android:contentDescription="@string/folder_icon_description"
         app:layout_constraintBottom_toTopOf="@id/empty_title"
         app:layout_constraintVertical_chainStyle="packed"/>
 
@@ -26,7 +26,7 @@
         app:layout_constraintBottom_toTopOf="@id/empty_description"
         android:textColor="?attr/colorSecondary"
         android:textSize="16sp"
-        android:text="@string/empty" />
+        android:text="@string/empty_title" />
 
     <TextView
         android:id="@+id/empty_description"
@@ -36,7 +36,7 @@
         app:layout_constraintStart_toStartOf="@id/empty_title"
         app:layout_constraintEnd_toEndOf="@id/empty_title"
         app:layout_constraintBottom_toTopOf="@id/refresh_button"
-        android:text="@string/no_repositories_at_the_moment"
+        android:text="@string/empty_body"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="14sp"/>
 
@@ -50,5 +50,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/refresh" />
+        android:text="@string/refresh_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
