--- a/app/src/main/res/layout/fragment_repo_details.xml
+++ b/app/src/main/res/layout/fragment_repo_details.xml
@@ -85,8 +85,10 @@
                 android:textSize="16sp"
                 android:text="@string/license_caption"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!--stargazers block-->
+            <LinearLayout
                 android:id="@+id/stars_group"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
@@ -96,8 +98,6 @@
                     android:id="@+id/star_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:src="@drawable/ic_star"
                     app:tint="@color/git_yellow"
                     android:contentDescription="@string/star_icon_description"/>
@@ -107,9 +107,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    app:layout_constraintTop_toTopOf="@id/star_icon"
-                    app:layout_constraintStart_toEndOf="@id/star_icon"
-                    app:layout_constraintBottom_toBottomOf="@id/star_icon"
                     android:textColor="@color/git_yellow"
                     android:textSize="16sp"
                     android:text=""/>
@@ -119,17 +116,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    app:layout_constraintTop_toTopOf="@id/star_icon"
-                    app:layout_constraintStart_toEndOf="@id/stars_count"
-                    app:layout_constraintBottom_toBottomOf="@id/star_icon"
                     android:textColor="?attr/colorOnPrimary"
                     android:textSize="16sp"
                     android:text="@string/stars_caption"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!--forks block-->
+            <LinearLayout
                 android:id="@+id/forks_group"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
@@ -139,8 +135,6 @@
                     android:id="@+id/fork_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:src="@drawable/ic_fork"
                     app:tint="@color/git_lime"
                     android:contentDescription="@string/fork_icon_description"/>
@@ -150,9 +144,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    app:layout_constraintTop_toTopOf="@id/fork_icon"
-                    app:layout_constraintStart_toEndOf="@id/fork_icon"
-                    app:layout_constraintBottom_toBottomOf="@id/fork_icon"
                     android:textColor="@color/git_lime"
                     android:textSize="16sp"
                     android:text=""/>
@@ -162,16 +153,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    app:layout_constraintTop_toTopOf="@id/fork_icon"
-                    app:layout_constraintStart_toEndOf="@id/forks_count"
-                    app:layout_constraintBottom_toBottomOf="@id/fork_icon"
                     android:textColor="?attr/colorOnPrimary"
                     android:textSize="16sp"
                     android:text="@string/forks_caption"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!--watches block-->
+            <LinearLayout
                 android:id="@+id/watches_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -182,8 +171,6 @@
                     android:id="@+id/watch_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:src="@drawable/ic_eye"
                     app:tint="@color/git_diamond"
                     android:contentDescription="@string/watch_icon_description"/>
@@ -193,9 +180,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    app:layout_constraintTop_toTopOf="@id/watch_icon"
-                    app:layout_constraintStart_toEndOf="@id/watch_icon"
-                    app:layout_constraintBottom_toBottomOf="@id/watch_icon"
                     android:textColor="@color/git_diamond"
                     android:textSize="16sp"
                     android:text=""/>
@@ -205,14 +189,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
-                    app:layout_constraintTop_toTopOf="@id/watch_icon"
-                    app:layout_constraintStart_toEndOf="@id/watches_count"
-                    app:layout_constraintBottom_toBottomOf="@id/watch_icon"
                     android:textColor="?attr/colorOnPrimary"
                     android:textSize="16sp"
                     android:text="@string/watchers_caption"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
             <androidx.constraintlayout.helper.widget.Flow
                 android:id="@+id/info_flow"
