--- a/app/src/main/res/layout/fragment_repo_details.xml
+++ b/app/src/main/res/layout/fragment_repo_details.xml
@@ -92,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
+                android:gravity="center_vertical"
                 app:layout_constraintTop_toBottomOf="@id/scales_icon"
                 app:layout_constraintStart_toStartOf="@id/link_icon">
                 <ImageView
@@ -129,6 +130,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
+                android:gravity="center_vertical"
                 app:layout_constraintTop_toBottomOf="@id/scales_icon"
                 app:layout_constraintStart_toStartOf="@id/link_icon">
                 <ImageView
@@ -165,6 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
+                android:gravity="center_vertical"
                 app:layout_constraintTop_toBottomOf="@id/scales_icon"
                 app:layout_constraintStart_toStartOf="@id/link_icon">
                 <ImageView
